# fastapi_curso

./: .gitignore  README.md  database.db  main.py  models.py  pyproject.toml  requirements.txt
tests/: test_fastapi_curso.py
utils/: functions.py
