[tool.poetry]
name = "fastapi_curso"
version = "0.1.0"
description = ""
authors = ["GussSoares <gustavo.soares.cdc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
yfinance = "^0.1.63"
sqlmodel = "^0.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
